# aistream

./: CMakeLists.txt  README.md  index.md
cfg/: config.json  object.json  task.json
cmake/: eigen.cmake  ffmpeg.cmake  freetype.cmake  grpc.cmake  grpc_common.cmake  libevent.cmake  libtorch.cmake  mongodb.cmake  opencv.cmake  rabbitmq.cmake  rtsp.cmake  x264.cmake
doc/api/: apidoc.json  index  restapi.h
doc/api/html/: index.html
doc/api/html/assets/: main.bundle.js
include/: config.h  db.h  framework.h  log.h  master.h  obj.h  output.h  pipeline.h  rest.h  share.h  slave.h  stream.h  system.h  task.h  tensor.h
plugins/: CMakeLists.txt
plugins/common/: CMakeLists.txt  common.cpp  common.h
plugins/debug/: CMakeLists.txt  debug.cpp
plugins/libfacedetection/: CMakeLists.txt  detection.cpp  detection2.cpp
plugins/official/: CMakeLists.txt
plugins/official/bert/: CMakeLists.txt  bert_libtorch.cpp
plugins/official/bert/ftokenizers/: CMakeLists.txt  ftokenizers.cpp
plugins/official/bert/python/: trace.py
plugins/official/bert/tokenizers/: .clang-format  .editorconfig  .projectile  .rgignore  CMakeLists.txt  README.md  data.h.in  launch.json
plugins/official/bert/tokenizers/cmake/: tokenizersConfig.cmake.in  tokenizersHelpers.cmake
plugins/official/bert/tokenizers/data/vocabs/: vocab.txt
plugins/official/bert/tokenizers/tokenizers/: CMakeLists.txt
plugins/official/bert/tokenizers/tokenizers/basic/: CMakeLists.txt  basic_tokenizer.cc  basic_tokenizer.h  basic_tokenizer_test.cc  wordpiece_tokenizer.cc  wordpiece_tokenizer.h  wordpiece_tokenizer_test.cc
plugins/official/bert/tokenizers/tokenizers/bert/: CMakeLists.txt  bert_tokenizer.cc  bert_tokenizer.h  bert_tokenizer_test.cc
plugins/official/bert/tokenizers/tokenizers/fundamental/: CMakeLists.txt  fundamental_tokenizer.cc  fundamental_tokenizer.h  fundamental_tokenizer_test.cc  fundamental_tokenizer_test.h
plugins/official/bert/tokenizers/tokenizers/lib/: CMakeLists.txt
plugins/official/bert/tokenizers/tokenizers/lib/unilib/: CMakeLists.txt  unicode.cpp  unicode.h  uninorms.cpp
plugins/official/bert/tokenizers/tokenizers/utils/: CMakeLists.txt  tokenizer_utils.cc  tokenizer_utils.h  tokenizer_utils_test.cc  unistr_utils.h
plugins/official/decode/: decode.h  decode_cpu.cpp  decode_cpu_rgb.cpp  decode_cpu_yuv.cpp  dl_decode.cpp
plugins/official/gat1400/: gat1400.cpp  gat1400.h
plugins/official/grpc_test/: CMakeLists.txt  test_client.cc  test_server.cc
plugins/official/httpfile/: httpfile.cpp  httpfile.h
plugins/official/osd/: osd.cpp
plugins/official/output/: rabbitmq.cpp
plugins/official/preview/: preview.cpp
plugins/official/resnet50/: resnet50.cpp  resnet50_opencv.cpp
plugins/official/rtmp/: rtmp.cpp  rtmp.h
plugins/official/rtsp/: dl_rtsp.cpp  rtsp.cpp  rtsp.h
plugins/official/triton/: CMakeLists.txt  client.cpp  server.cpp
plugins/official/triton/protos/: infer.proto
plugins/official/triton/python/: client_async.py  infer_pb2.py  infer_pb2.pyi  infer_pb2_grpc.py  yolo_detection.py
plugins/official/yolov3/: yolov3_opencv.cpp
plugins/release/decode/: decode.cpp  decode.h
plugins/release/gat1400/: gat1400.cpp  gat1400.h
plugins/release/output/: output.cpp  output.h
plugins/release/rtsp/: rtsp.cpp  rtsp.h
plugins/rtsp/: rtsp.cpp  rtsp.h
plugins/tracker/: CMakeLists.txt  tracker.cpp
plugins/tracker/bytetrack/include/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
plugins/tracker/bytetrack/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
samples/: bert_cpu.json  debug.json  face_detection.json  face_osd.json  jpegdec.json  preview.json  resnet50.json  simple.json  single.json  triton.json  yolov3.json
src/: CMakeLists.txt  config.cpp  db.cpp  main.cpp  master.cpp  obj.cpp  output.cpp  pipeline.cpp  rest.cpp  rest_slave.cpp  share.cpp  slave.cpp  stream.cpp  task.cpp
src/backend/dylib/: dylib.cpp  dylib.h
src/backend/opencvdnn/: opencvdnn.h
src/backend/tvm/: tvm.h
test/script/: start.sh  stop.sh  test.sh  watch_mem.sh
work/cjson/: CMakeLists.txt
work/cjson/inc/: cJSON.h
work/pkg/: pre_build.sh
work/webclient/: README.md  index.html  package.json
work/webclient/config/: index.js
work/webclient/src/api/: getData.js
work/webclient/src/components/: headTop.vue  tendency.vue
work/webclient/src/config/: env.js  fetch.js
work/webclient/src/page/: addRtmp.vue  addRtsp.vue  addSlaves.vue  adminList.vue  audio.vue  docInfo.vue  file.vue  gb28181.vue  home.vue  login.vue  manage.vue  output.vue  preview.vue  query.vue  rtmp.vue  rtsp.vue  server.vue  systemInfo.vue  systemInit.vue  test.vue
work/webclient/src/router/: index.js
work/webclient/src/store/: index.js
